# htfr

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
agents/: AGENTS.md  analyze_sparsity.sh  benchmark_htfr.sh  benchmark_htft.sh  human_eval.sh  run_training_matrix.sh  setup_env.sh  smoke_cli.sh  test_project.sh  train_htfr.sh  train_htft.sh
examples/: benchmark_hft.py  benchmark_htft.py  gemma3_benchmark.py  online_demo.py  train_hft.py  train_htft.py  train_test_htfr.py
htfr/: __init__.py  checkpoint.py  context.py  devices.py  faiss_index.py  feature_ops.py  gemma.py  hyperfield_transformer.py  hypertensor.py  hypertensor_field_transformer.py  initialization.py  interpolation.py  model.py  profiler.py  serialization.py  tensor.py  trainer.py
htfr/data/: gemma_adapter.py
logs/human_eval/: metrics.jsonl
notes/: htfr_architecture_update.md  htfr_llm_adaptation.md  interpolation_analysis.md
plans/: rocm_parallelization.md
tests/: test_checkpoint.py  test_context_builder.py  test_faiss_index.py  test_feature_ops.py  test_hyperfield_transformer.py  test_hypertensor_field_transformer.py  test_hypertensor_math.py  test_initialization.py  test_interpolation_math.py  test_interpolation_modules.py  test_model_math.py  test_tensor_math.py  test_trainer.py
