[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htfr"
version = "0.1.0"
description = "Hypertensor Field Regressor"
authors = [{name = "HTFR Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "python-dotenv>=1.0",
    "numba>=0.60",
    "sympy>=1.12",
]

[project.optional-dependencies]
benchmark = [
    "datasets>=2.19",
    "transformers",
    "torch>=2.3",
    "huggingface_hub>=0.23",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]
rocm = [
    "datasets>=2.19",
    "accelerate",
    "duckdb",
    "fabric",
    "huggingface_hub>=0.23",
    "jsonschema",
    "litellm",
    "optimum[amd]",
    "peft",
    "pydantic",
    "pyyaml",
    "rich",
    "transformers",
    "trl",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["htfr"]
